--- a/KutuphaneOtomasyon/KutuphaneOtomasyon.csproj
+++ b/KutuphaneOtomasyon/KutuphaneOtomasyon.csproj
@@ -33,8 +33,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,8 +61,140 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="IslemPaneli.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="IslemPaneli.Designer.cs">
+      <DependentUpon>IslemPaneli.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Kayitlar.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Kayit\GeriAlForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Kayit\GeriAlForm.Designer.cs">
+      <DependentUpon>GeriAlForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Kayit\OduncForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Kayit\OduncForm.Designer.cs">
+      <DependentUpon>OduncForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Kaynaklar.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Kaynak\KaynakEkleForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Kaynak\KaynakEkleForm.Designer.cs">
+      <DependentUpon>KaynakEkleForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Kaynak\KaynakGuncelleForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Kaynak\KaynakGuncelleForm.Designer.cs">
+      <DependentUpon>KaynakGuncelleForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Kaynak\KaynakListeForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Kaynak\KaynakListeForm.Designer.cs">
+      <DependentUpon>KaynakListeForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Kaynak\KaynakSilForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Kaynak\KaynakSilForm.Designer.cs">
+      <DependentUpon>KaynakSilForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Kullanicilar.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Kullanici\KullaniciEkleForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Kullanici\KullaniciEkleForm.Designer.cs">
+      <DependentUpon>KullaniciEkleForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Kullanici\KullaniciGuncelleForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Kullanici\KullaniciGuncelleForm.Designer.cs">
+      <DependentUpon>KullaniciGuncelleForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Kullanici\KullaniciListeForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Kullanici\KullaniciListeForm.Designer.cs">
+      <DependentUpon>KullaniciListeForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Kullanici\KullaniciSilForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Kullanici\KullaniciSilForm.Designer.cs">
+      <DependentUpon>KullaniciSilForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Model1.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Personeller.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="sysdiagrams.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="IslemPaneli.resx">
+      <DependentUpon>IslemPaneli.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Kayit\GeriAlForm.resx">
+      <DependentUpon>GeriAlForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Kayit\OduncForm.resx">
+      <DependentUpon>OduncForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Kaynak\KaynakEkleForm.resx">
+      <DependentUpon>KaynakEkleForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Kaynak\KaynakGuncelleForm.resx">
+      <DependentUpon>KaynakGuncelleForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Kaynak\KaynakListeForm.resx">
+      <DependentUpon>KaynakListeForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Kaynak\KaynakSilForm.resx">
+      <DependentUpon>KaynakSilForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Kullanici\KullaniciEkleForm.resx">
+      <DependentUpon>KullaniciEkleForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Kullanici\KullaniciGuncelleForm.resx">
+      <DependentUpon>KullaniciGuncelleForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Kullanici\KullaniciListeForm.resx">
+      <DependentUpon>KullaniciListeForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Kullanici\KullaniciSilForm.resx">
+      <DependentUpon>KullaniciSilForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -63,6 +204,14 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EntityDeploy Include="Model1.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Model1.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Model1.edmx.diagram">
+      <DependentUpon>Model1.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -75,6 +224,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Model1.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Model1.edmx</DependentUpon>
+      <LastGenOutput>Model1.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Model1.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Model1.edmx</DependentUpon>
+      <LastGenOutput>Model1.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
