--- a/KutuphaneOtomasyon/App.config
+++ b/KutuphaneOtomasyon/App.config
@@ -10,6 +10,7 @@
   <connectionStrings>
     <add name="KutuphaneOtomasyonuEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-F96E4NN\SQLEXPRESS;initial catalog=KutuphaneOtomasyonu;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="KutuphaneOtomasyonuEntities1" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-F96E4NN\SQLEXPRESS;initial catalog=KutuphaneOtomasyonu;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="KutuphaneOtomasyonuEntities2" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-F96E4NN\SQLEXPRESS;initial catalog=KutuphaneOtomasyonu;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
