--- a/KutuphaneOtomasyon/KutuphaneOtomasyon.csproj
+++ b/KutuphaneOtomasyon/KutuphaneOtomasyon.csproj
@@ -237,6 +237,7 @@
     <Content Include="Model1.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model1.edmx</DependentUpon>
+      <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
